--- a/ServerCode/app/src/main/res/layout/activity_google_play.xml
+++ b/ServerCode/app/src/main/res/layout/activity_google_play.xml
@@ -13,7 +13,24 @@
 		android:id="@+id/sign_in_button"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_centerVertical="true"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentStart="true"/>
+
+	<Button
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Load Game"
+		android:id="@+id/load_game_button"
+		android:layout_alignParentTop="true"
 		android:layout_centerHorizontal="true"/>
+
+	<Button
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Test Save"
+		android:id="@+id/test_save_button"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentEnd="true"/>
+
 
 </RelativeLayout>
