--- a/Arza/android/res/layout/activity_leader_boards.xml
+++ b/Arza/android/res/layout/activity_leader_boards.xml
@@ -13,30 +13,26 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Leaderboards"
+    android:text="Player Profile"
     android:textColor="#000000"
     android:gravity="center"
     android:textSize="36sp"
     android:padding="@dimen/activity_vertical_margin"
      />
-    <TextView
+    <io.karim.MaterialTabs
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/material_tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Scores"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:textSize="26sp"
-        android:padding="@dimen/activity_vertical_margin"
-        />
-    <TextView
+        android:layout_height="48dp"
+        android:background="#0D98BA"
+        app:mtSameWeightTabs="true"
+        app:mtPaddingMiddle="false" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Achievements"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:textSize="26sp"
-        android:padding="@dimen/activity_vertical_margin"
-        />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        tools:context="com.team8.game.LeaderBoards"/>
 
 
 </LinearLayout>
