--- a/Arza/android/res/layout/activity_leader_boards.xml
+++ b/Arza/android/res/layout/activity_leader_boards.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,15 +11,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#03a9a5"
     tools:context="com.team8.game.LeaderBoards">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Player Profile"
-    android:textColor="#000000"
-    android:gravity="center"
-    android:textSize="36sp"
-    android:padding="@dimen/activity_vertical_margin"
-     />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Player Profile"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:textSize="36sp"
+        android:padding="@dimen/activity_vertical_margin"
+        />
     <io.karim.MaterialTabs
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/material_tabs"
@@ -33,6 +38,19 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         tools:context="com.team8.game.LeaderBoards"/>
+    </LinearLayout>
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/fab_shadow"
+        fab:fab_colorNormal="@color/material_blue_500"
+        fab:fab_colorPressed="@android:color/holo_blue_dark"
+        fab:fab_colorRipple="@android:color/holo_green_dark" />
 
 
-</LinearLayout>
+</RelativeLayout>
